# Pix2Mesh

./: .gitignore  BinaryImageMesher.cpp  BinaryImageMesher.hpp  CMakeLists.txt  README.md  create_image.py  main.cpp  tests.cpp
